--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <style>
 
    body{
-    background-image:url('');
-    background-repeat:repeat;
+    background-image:url('https://i.pinimg.com/1200x/ce/14/a9/ce14a90ea9f9b2d38361f86d48d354dd.jpg');
+    background-repeat:no repeat;
     background-size: cover  
    } 
 
    h1{
-    background-color: rgb(195, 181, 181);
+    background-color: rgb(244, 239, 239);
     color: rgb(178, 11, 11);
     padding: 10px;
     border-radius: 10px;
@@ -39,7 +39,7 @@
 
 
    <div class="containter-fluid text-center">
-        <h1>Emergency Go Bag Essentials</h1>
+        <h1><b>Emergency Go Bag Essentials</b></h1>
     </div>
     <br><br>
 
@@ -57,12 +57,12 @@
      </div>
 
      <div class="col-lg-4 bg-danger h-65">
-        <h3>Food and Water</h3>
+        <h3><b>Food and Water</b></h3>
         <p>In a scenario where food is scare in your evacuation centers, the bag must contain some light and heavy snacks that will prevent hunger and weakness. This ensures that you have the energy and strength to remain focus and alert at all times.</p>
      </div>
 
      <div class="col-lg-4 bg-warning h-65">
-        <h3>Important Documents</h3>
+        <h3><b><<Important Documents</b></h3>
         <p>Essential for rebuilding, proving ownership, and identity in case of emergency after the calamity.</p>
         <ul>
             <li>Birth certificates</li>
@@ -92,4 +92,5 @@
 </div>
 
 </body>
+
 </html>
