--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    } 
 
    h1{
-    background-color: rgb(244, 239, 239);
+    background-color: rgb(195, 181, 181);
     color: rgb(178, 11, 11);
     padding: 10px;
     border-radius: 10px;
@@ -36,9 +36,8 @@
     </style>
 </head>
 <body>
-
-
-   <div class="containter-fluid text-center">
+    
+   <div class="container-fluid text-center">
         <h1><b>Emergency Go Bag Essentials</b></h1>
     </div>
     <br><br>
@@ -49,7 +48,7 @@
     </dl>
     <br>
 
-    <div class="containter-fluid">
+    <div class="container-fluid">
         <div class="row gap-3 justify-containter-center" style="height: 380px;">
             <div class="col-lg-4 bg-warning h-65">
                 <h3><b>Medical Kit</b></h3>
@@ -62,7 +61,7 @@
      </div>
 
      <div class="col-lg-4 bg-warning h-65">
-        <h3><b><<Important Documents</b></h3>
+        <h3><b><Important Documents</b></h3>
         <p>Essential for rebuilding, proving ownership, and identity in case of emergency after the calamity.</p>
         <ul>
             <li>Birth certificates</li>
@@ -94,3 +93,4 @@
 </body>
 
 </html>
+
