--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
      </div>
 
      <div class="col-lg-4 bg-warning h-65">
-        <h3><b><Important Documents</b></h3>
+        <h3><b>Impornant Documents</b></h3>
         <p>Essential for rebuilding, proving ownership, and identity in case of emergency after the calamity.</p>
         <ul>
             <li>Birth certificates</li>
@@ -93,5 +93,6 @@
 </body>
 
 </html>
+
 
 
