--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
    body{
     background-image:url('https://i.pinimg.com/1200x/ce/14/a9/ce14a90ea9f9b2d38361f86d48d354dd.jpg');
-    background-repeat:no repeat;
-    background-size: cover  
+    background-repeat:no-repeat;
+    background-size: cover;  
    } 
 
    h1{
@@ -49,7 +49,7 @@
     <br>
 
     <div class="container-fluid">
-        <div class="row gap-3 justify-containter-center" style="height: 380px;">
+        <div class="row gap-3 justify-content-center" style="height: 380px;">
             <div class="col-lg-4 bg-warning h-65">
                 <h3><b>Medical Kit</b></h3>
                 <p>When out of reach with hospitals or evacuation centers, medical kits will serve as your first aid. It is so that minor injuries can be temporarily treated until professional help arrives. In addition to that, medical kits should also contain over the counter medicines and prescribed medicines.</p>
@@ -61,7 +61,7 @@
      </div>
 
      <div class="col-lg-4 bg-warning h-65">
-        <h3><b>Impornant Documents</b></h3>
+        <h3><b>Important Documents</b></h3>
         <p>Essential for rebuilding, proving ownership, and identity in case of emergency after the calamity.</p>
         <ul>
             <li>Birth certificates</li>
@@ -93,6 +93,7 @@
 </body>
 
 </html>
+
 
 
 
