--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    } 
 
    h1{
-    background-color: rgb(195, 181, 181);
+    background-color: rgb(227, 219, 219);
     color: rgb(178, 11, 11);
     padding: 10px;
     border-radius: 10px;
@@ -28,7 +28,7 @@
    }
    
    dl{
-    background-color: rgb(195, 181, 181);
+    background-color: rgb(227, 219, 219);
     padding: 10px;
     border-radius: 10px;
    }
@@ -38,13 +38,15 @@
 <body>
     
    <div class="container-fluid text-center">
-        <h1><b>Emergency Go Bag Essentials</b></h1>
+  <h1><b>🎒🚨Emergency Go Bag Essentials🎒🚨</b></h1>
     </div>
     <br><br>
 
     <dl>
         <dt><b>Overview</b></dt>
-            <dd>Emergency Go Bags are a requirement in every household. These go bags will provide the essential items that will be crucial for our survival. The essential items needed in the go bag are the ff:</dd>
+            <dd>Emergency Go Bags are a requirement in every household--it contains the neccessary items needed for the human body to do work. 
+            It is essential for our survival as it contains important needs such as food and water, medical kits, and etc..Having 
+            an emergency go bag on stand-by reduces panic and will allow for us to smoothly exit the area and evacuate safely. </dd>
     </dl>
     <br>
 
@@ -93,6 +95,7 @@
 </body>
 
 </html>
+
 
 
 
