--- a/index.html
+++ b/index.html
@@ -91,11 +91,12 @@
 
     </div>
 </div>
-<a href="Pngtree. (n.d.). Fire Background With Boss And Employee [Pinterest pin]. Pinterest. https://ph.pinterest.com/pin/264164334387387850/"</a>
+<a href="https://docs.google.com/document/d/1ZsOQ2fWa00T51Q-auTKRYkElRxYofMW3tp4EnEyY0GA/edit?usp=sharing"</a>
 
 </body>
 
 </html>
+
 
 
 
